// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MiqActionStructuredList should render action info structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_action_info"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Description",
            "value": "bar",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="1"
      onClick={[Function]}
      tabIndex={1}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Action Type",
            "value": "Default",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqActionStructuredList should render action policies structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_action"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className="clickable"
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title="View this Alert"
    >
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "cells": Array [
              Object {
                "icon": "pficon pficon-warning-triangle-o",
                "value": "Alert description",
              },
            ],
            "onclick": "DoNav('/miq_policy/show/1');",
            "title": "View this Alert",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqActionStructuredList should render action type 1 structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_action_info"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Name",
            "value": "Snapshot name",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqActionStructuredList should render action type 2 structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_action_info"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Object Details",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="1"
      onClick={[Function]}
      tabIndex={1}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Starting Message",
            "value": "Message",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="2"
      onClick={[Function]}
      tabIndex={2}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Request",
            "value": "Request",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="3"
      onClick={[Function]}
      tabIndex={3}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Attribute/Value Pairs",
            "value": Array [
              Object {
                "value": "pair1",
              },
              Object {
                "value": "pair2",
              },
              Object {
                "value": "pair3",
              },
            ],
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqActionStructuredList should render action type 3 structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_action_info"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className="clickable"
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title="View this Alert"
    >
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "cells": Array [
              Object {
                "icon": "pficon pficon-warning-triangle-o",
                "value": "Alert description",
              },
            ],
            "onclick": "/miq_policy/x_show/al-#{alert.id}?accord=alert",
            "title": "View this Alert",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;
